# olddog

ebs_fdw/: .gitignore  Cargo.toml  README.md  ebs_fdw.control
ebs_fdw/src/: lib.rs
idi/: Cargo.toml  README.md
idi/src/: lib.rs
newtricks/: Cargo.toml  README.md  newtricks.control
