[package]
name = "ebs_fdw"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = []

[dependencies]
pgx = "=0.6.1"
supabase-wrappers = "0.1"
aws-config = "0.54.1"
aws-sdk-ec2 = "0.24.0"
aws-sdk-ebs = "0.24.0"
tokio = { version = "1", features = ["full"] }
futures-core = "0.3.26"
futures-util = "0.3.26"
env_logger = "0.9.0"

[dev-dependencies]
pgx-tests = "=0.6.1"

[profile.dev]
panic = "unwind"
#lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
